--- a/dove/index.html
+++ b/dove/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
 
+<div class="preloader">
+	<img src="img/preloader.gif" alt="preloader">
+</div>	
+
 <div class="wrapper row-fluid"> 
 	
 	<div class="nav row-fluid"> <!--======NAVIGATION======-->
